--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwind-nextjs-starter-blog",
+  "name": "qinjiangban-blog",
   "version": "2.2.0",
   "private": true,
   "scripts": {
